--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "01-gerenciamento-tarefas",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --watch src/server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "csv-parse": "^5.4.0"
+  }
 }
